# llm-tollbooth

./: .env.example  .gitignore  README.md  docker-compose.yml
dashboard/: Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/(app)/: layout.tsx  page.tsx
dashboard/app/(app)/keys/: actions.ts  page.tsx
dashboard/app/(app)/pricing/: actions.ts  page.tsx
dashboard/app/(app)/project/: actions.ts  page.tsx
dashboard/app/(app)/quality/: page.tsx
dashboard/app/(app)/requests/: page.tsx
dashboard/app/(app)/requests/[id]/: page.tsx
dashboard/app/(app)/rules/: actions.ts  page.tsx
dashboard/app/(app)/settings/: actions.ts  page.tsx
dashboard/app/api/auth/[...nextauth]/: route.ts
dashboard/app/login/: actions.ts  login-form.tsx  multi-login-form.tsx  page.tsx
dashboard/app/requests/: page.tsx
dashboard/app/requests/[id]/: page.tsx
dashboard/app/signup/: actions.ts  page.tsx  signup-form.tsx
dashboard/components/: AddMemberForm.tsx  Badge.tsx  BudgetBurn.tsx  Cards.tsx  EvalSettingsForm.tsx  Filters.tsx  FiringHistory.tsx  KeysTable.tsx  ModelBreakdown.tsx  Nav.tsx  NewKeyForm.tsx  NewProjectForm.tsx  NewRuleForm.tsx  PricingTable.tsx  ProjectSwitcher.tsx  QualityByModel.tsx  QualityChart.tsx  RangeFilter.tsx  RequestsTable.tsx  RulesTable.tsx  ScoredCalls.tsx  TrendChart.tsx  app-sidebar.tsx  loading-overlay.tsx  page-header.tsx  pending-nav.tsx  status-badge.tsx  theme-toggle.tsx
dashboard/components/ui/: badge.tsx  card.tsx  controls.ts  field.tsx
dashboard/lib/: accounts.ts  auth.config.ts  auth.ts  budget.ts  cassandra.ts  config.ts  eval.ts  format.ts  gateway.ts  keys.ts  mongo.ts  nextauth.ts  pricing.ts  project.ts  rule-format.ts  rules.ts  time.ts
dashboard/types/: next-auth.d.ts
docs/: spec.md
gateway/: Dockerfile  package-lock.json  package.json  tsconfig.json
gateway/src/: auth.ts  budget.test.ts  budget.ts  cache.test.ts  cache.ts  cassandra.ts  config.ts  errors.ts  event.ts  fallback.test.ts  fallback.ts  kafka.ts  keys.ts  mongo.ts  pricing.test.ts  pricing.ts  requests.ts  server.ts  tokens.ts
gateway/src/providers/: anthropic.test.ts  anthropic.ts  chunks.ts  http.test.ts  http.ts  index.ts  mock.test.ts  mock.ts  openai.ts  types.ts
gateway/src/routes/: admin.ts  chat.ts  health.ts  models.ts
infra/cassandra/: init.cql
loadgen/: Dockerfile  pyproject.toml
loadgen/loadgen/: __init__.py  events.py  gateway.py  main.py
workers/eval/: main.py  pyproject.toml  test_main.py
workers/ingest/: main.py  pyproject.toml  test_main.py
workers/rules/: Dockerfile  main.py  pyproject.toml  test_main.py
