[project]
name = "ingest-worker"
version = "0.1.0"
description = "Kafka consumer that ingests LLM Tollbooth events"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka==2.6.1",
    "cassandra-driver==3.29.2",
    "pymongo==4.10.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
