[project]
name = "ingest-worker"
version = "0.1.0"
description = "Kafka consumer that ingests LLM Tollbooth events"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka==2.6.1",
    "cassandra-driver==3.29.2",
    "pymongo==4.10.1",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

# The tests import `main` directly, so pytest has to be able to see it. It sits
# at the package root rather than under a src/ layout, hence rootdir on the path.
[tool.pytest.ini_options]
pythonpath = ["."]
