[project]
name = "rules-worker"
version = "0.1.0"
description = "Evaluates alert rules against the rollup and fires their actions"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka==2.6.1",
    "cassandra-driver==3.29.2",
    "pymongo==4.10.1",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.pytest.ini_options]
pythonpath = ["."]
